<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2008-present The Aspectran Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aspectran</groupId>
    <artifactId>aspectran-petclinic</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>Petclinic Demo</name>
    <description>Petclinic Demo is a sample web application built on top of Aspectran 9.</description>
    <inceptionYear>2012</inceptionYear>

    <organization>
        <name>The Aspectran Project</name>
        <url>https://aspectran.com/</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <contributors>
        <contributor>
            <name>Juho Jeong</name>
            <email>aspectran@gmail.com</email>
        </contributor>
    </contributors>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.release>21</maven.compiler.release>
        <!-- [Critical] Must be 'true' to preserve method parameter names, which Aspectran requires for runtime argument mapping. -->
        <maven.compiler.parameters>true</maven.compiler.parameters>

        <aspectran.version>9.1.3-SNAPSHOT</aspectran.version>
    </properties>

    <repositories>
        <repository>
            <id>central-portal-snapshots</id>
            <name>Central Portal Snapshots</name>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.aspectran</groupId>
            <artifactId>aspectran-logging</artifactId>
            <version>${aspectran.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aspectran</groupId>
            <artifactId>aspectran-daemon</artifactId>
            <version>${aspectran.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aspectran</groupId>
            <artifactId>aspectran-shell-jline</artifactId>
            <version>${aspectran.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aspectran</groupId>
            <artifactId>aspectran-with-undertow</artifactId>
            <version>${aspectran.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aspectran</groupId>
            <artifactId>aspectran-with-thymeleaf</artifactId>
            <version>${aspectran.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aspectran</groupId>
            <artifactId>aspectran-with-jpa</artifactId>
            <version>${aspectran.version}</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>7.0.2</version>
        </dependency>
        <!-- Querydsl dependencies -->
        <dependency>
            <groupId>io.github.openfeign.querydsl</groupId>
            <artifactId>querydsl-jpa</artifactId>
            <version>7.0</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign.querydsl</groupId>
            <artifactId>querydsl-apt</artifactId>
            <version>7.0</version>
            <classifier>jakarta</classifier>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>7.1.2.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>9.0.1.Final</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.4</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.4.240</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.owasp.esapi</groupId>
            <artifactId>esapi</artifactId>
            <version>2.7.0.0</version>
            <scope>compile</scope>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:-try,-path,-options</arg>
                    </compilerArgs>
                    <proc>full</proc>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <excludes>
                        <exclude>**/package-info.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <outputDirectory>app/lib/ext</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.9.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>app/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <excludeTypes>pom</excludeTypes>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <excludeDefaultDirectories>true</excludeDefaultDirectories>
                    <filesets>
                        <fileset>
                            <directory>target/</directory>
                        </fileset>
                        <fileset>
                            <directory>app/lib</directory>
                            <includes>
                                <include>**</include>
                            </includes>
                            <excludes>
                                <exclude>.gitignore</exclude>
                            </excludes>
                        </fileset>
                        <fileset>
                            <directory>app/logs</directory>
                            <includes>
                                <include>**</include>
                            </includes>
                            <excludes>
                                <exclude>.gitignore</exclude>
                            </excludes>
                        </fileset>
                        <fileset>
                            <directory>app/temp</directory>
                            <includes>
                                <include>**</include>
                            </includes>
                            <excludes>
                                <exclude>.gitignore</exclude>
                            </excludes>
                        </fileset>
                        <fileset>
                            <directory>app/work</directory>
                            <includes>
                                <include>_resource_*/</include>
                                <include>_webroot/</include>
                                <include>_webapps/</include>
                            </includes>
                            <excludes>
                                <exclude>.gitignore</exclude>
                            </excludes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>css-bootstrap</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.github.cleydyr</groupId>
                        <artifactId>dart-sass-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <configuration>
                            <!-- use a fixed version of dart-saas to ensure reproducible builds -->
                            <version>1.83.0</version>
                            <inputFolder>${basedir}/src/main/scss</inputFolder>
                            <outputFolder>${basedir}/app/webroot/css</outputFolder>
                            <!--<style>COMPRESSED</style>-->
                        </configuration>
                        <executions>
                            <execution>
                                <id>generate-css-using-sass</id>
                                <phase>generate-resources</phase>
                                <goals>
                                    <goal>compile-sass</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
